// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OfficialFeedbackPost /> renders correctly for admin 1`] = `
<OfficialFeedbackPost__Container
  className="e2e-official-feedback-post"
  key="feedbackId1"
>
  <OfficialFeedbackPost__StyledMoreActionsMenu
    actions={
      Array [
        Object {
          "handler": [Function],
          "label": <FormattedMessage
            defaultMessage="Edit"
            id="app.components.IdeasShow.OfficialFeedback.editOfficialFeedbackPost"
          />,
          "name": "edit",
        },
        Object {
          "handler": [Function],
          "label": <FormattedMessage
            defaultMessage="Delete"
            id="app.components.IdeasShow.OfficialFeedback.deleteOfficialFeedbackPost"
          />,
          "name": "delete",
        },
      ]
    }
    ariaLabel="Show more actions"
  />
  <OfficialFeedbackPost__Body>
    <T
      supportHtml={true}
      value={
        Object {
          "en": "Update: Do Not Keep Calm, please panic now. End of transmission.",
        }
      }
    />
  </OfficialFeedbackPost__Body>
  <OfficialFeedbackPost__Footer>
    <OfficialFeedbackPost__Author>
      <T
        value={
          Object {
            "en": "Testing Official Department",
          }
        }
      />
    </OfficialFeedbackPost__Author>
    <OfficialFeedbackPost__DatePosted>
      <FormattedDate
        value="2012-01-01T04:06:07.000Z"
      />
    </OfficialFeedbackPost__DatePosted>
    <OfficialFeedbackPost__DateEdited>
      <FormattedMessage
        defaultMessage="last edited on {date}"
        id="app.components.IdeasShow.OfficialFeedback.lastEdition"
        values={
          Object {
            "date": <FormattedDate
              value="2011-01-01T04:26:07.000Z"
            />,
          }
        }
      />
    </OfficialFeedbackPost__DateEdited>
  </OfficialFeedbackPost__Footer>
</OfficialFeedbackPost__Container>
`;

exports[`<OfficialFeedbackPost /> renders correctly for non-admin 1`] = `
<OfficialFeedbackPost__Container
  className="e2e-official-feedback-post"
  key="feedbackId1"
>
  <OfficialFeedbackPost__Body>
    <T
      supportHtml={true}
      value={
        Object {
          "en": "Update: Do Not Keep Calm, please panic now. End of transmission.",
        }
      }
    />
  </OfficialFeedbackPost__Body>
  <OfficialFeedbackPost__Footer>
    <OfficialFeedbackPost__Author>
      <T
        value={
          Object {
            "en": "Testing Official Department",
          }
        }
      />
    </OfficialFeedbackPost__Author>
    <OfficialFeedbackPost__DatePosted>
      <FormattedDate
        value="2012-01-01T04:06:07.000Z"
      />
    </OfficialFeedbackPost__DatePosted>
    <OfficialFeedbackPost__DateEdited>
      <FormattedMessage
        defaultMessage="last edited on {date}"
        id="app.components.IdeasShow.OfficialFeedback.lastEdition"
        values={
          Object {
            "date": <FormattedDate
              value="2011-01-01T04:26:07.000Z"
            />,
          }
        }
      />
    </OfficialFeedbackPost__DateEdited>
  </OfficialFeedbackPost__Footer>
</OfficialFeedbackPost__Container>
`;
